# kyc-aml-v2

./: .gitignore  README.md  start_kyc_aml.sh  stop_kyc_aml.sh
kyc-aml-client/: .gitignore  KycAmlClient.go  config.json  main.go  structs.go
kyc-aml-client/KycAmlClient/: KycAmlClient.go  KycAmlClient_test.go  config.json  structs.go
kyc-aml-clientserver/: .gitignore  kyc-aml-clientserver  main.go
kyc-aml-clientserver/KycAmlClientServer/: KycAmlClientServer.go  config.json  structs.go
kyc-aml-data/: .gitignore  main.go
kyc-aml-data/KycAmlData/: KycAmlData.go  config.json  structs.go
kyc-aml-doublemetaphone/: CMakeLists.txt  KycAmlDoubleMetaphone.cpp  KycAmlDoubleMetaphone.hpp  config.json  main.cpp
kyc-aml-doublemetaphone/double-metaphone/: double_metaphone.cc  double_metaphone.h
kyc-aml-fuzzy/: .gitignore  kyc-aml-fuzzy  main.go
kyc-aml-fuzzy/KycAmlFuzzy/: KycAmlFuzzy.go  KycAmlFuzzy_oldtes.go  config.json  structs.go
kyc-aml-metaphone/: .gitignore  kyc-aml-metaphone  main.go
kyc-aml-metaphone/KycAmlMetaphone/: KycAmlMetaphone.go  config.json  structs.go
kyc-aml-querier/: kyc-aml-querier  main.go  structs.go
kyc-aml-server/: KycAmlServer.go  data_util.go  main.go  structs.go
kyc-aml-server/KycAmlServer/: KycAmlServer.go  KycAmlServer_test.go  config.json  structs.go
